Bug 438660 - Krita 5.0 has no resource bundle if a fresh installation was first started using a non-English locale under Windows
Summary: Krita 5.0 has no resource bundle if a fresh installation was first started us...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-15 01:27 UTC by Tyson Tan
Modified: 2021-06-18 01:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Krita warning message of no resource bundle (261.25 KB, image/png)
2021-06-15 01:28 UTC, Tyson Tan
Details
Krita Manage Resource Libraries is empty (229.34 KB, image/png)
2021-06-15 01:29 UTC, Tyson Tan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2021-06-15 01:27:58 UTC
Krita 5.0 has no resource bundle if a fresh installation was first started using a non-English locale under Windows.

Tested with krita-nightly-x64-5.0.0-prealpha-0a36a37004-setup.exe under Windows 10 21H1.

Steps to reproduce:

1) Uninstall Krita. Remove all Krita's settings and resources from the appdata folders.

2) Make sure Windows is using a non-English locale (for example Simplified Chinese) to make sure Krita will started using zh_CN locale.

3) Install the lastest Windows nightly

4) Start Krita for the first time, it will freeze a while at "Adding Resources", and display a waning message: "You don't have any resource bundles enabled. Only your local resources are available."

5) Krita's Manage Resource Libraries dialogue is now empty.

6) Switch Krita's language to English, the resource library will stay empty.

7) Delete Krita's resource folders from appdata folder (not the config files otherwise the language settings will be reset)

8) Start Krita again, now it will have all the bundles in the library.

9) Switch Krita's language back to Simplified Chinese, it still works properly.

Since the latest Windows nighties haven't yet fixed the UTF8 path no translation bug, I can install Krita fresh into a UTF8 directory (like "测试") and thus force it to start using English locale. In this case, Krita will have all the resources.

I remember something similar happened on Linux a while ago. Although my current installation is working fine.
Comment 1 Tyson Tan 2021-06-15 01:28:55 UTC
Created attachment 139327 [details]
Krita warning message of no resource bundle
Comment 2 Tyson Tan 2021-06-15 01:29:32 UTC
Created attachment 139328 [details]
Krita Manage Resource Libraries is empty
Comment 3 Bug Janitor Service 2021-06-17 12:12:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/917
Comment 4 Alvin Wong 2021-06-17 13:11:46 UTC
Git commit d1410e2abc0d83d522763f0e1f7121eeb2875189 by Alvin Wong.
Committed on 17/06/2021 at 13:10.
Pushed by alvinwong into branch 'master'.

Fix storage_types table to use untranslated names

Also bumped db version to 0.0.10 so it gets re-created.

M  +7    -7    libs/resources/KisResourceCacheDb.cpp

https://invent.kde.org/graphics/krita/commit/d1410e2abc0d83d522763f0e1f7121eeb2875189
Comment 5 Tyson Tan 2021-06-18 01:50:18 UTC
Thank you Alvin, it's now fixed. :)

BTW, the commit to "Re-add fractional high DPI scaling for Windows" is great. The Windows version now looks comparable to the Linux version. I wish it can be turned on by default -- more and more new displays, especially the laptop ones, can really benefit from that, giving our users a better first impression.