Fix storage_types table to use untranslated names

Also bumped db version to 0.0.10 so it gets re-created.

BUG: 438660